# python-api-client

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
mosparo/: Client.py  MosparoException.py  RequestHelper.py  StatisticResult.py  VerificationResult.py  __init__.py
mosparo_api_client/: Client.py  RequestHelper.py  __init__.py
tests/: test_Client.py  test_RequestHelper.py  test_StatisticResult.py  test_VerificationResult.py
